--- a/src/ProjectWideReusables/Banner/banner.css
+++ b/src/ProjectWideReusables/Banner/banner.css
@@ -79,3 +79,12 @@ a{
     text-align: right;
     word-spacing: 0px;
 }
+
+.hamburgerIcon {
+  width: 30px;
+  height: 30px;
+  margin: 4px 0;
+  padding-top: 15px;
+  cursor: pointer;
+}
+
